# purroute

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml.example  config.toml.example.bak  docker-compose.yml  init.sql  rustfmt.toml
.github/workflows/: ci.yml
scripts/: add_user.sh  delete_user.sh  get_user.sh  list_users.sh  reset_user.sh
src/: auth.rs  config.rs  main.rs  mod.rs  protocol.rs  routing.rs  upstreams.rs
src/api/: handlers.rs  middleware.rs  mod.rs  models.rs
src/protocols/: chain.rs  http.rs  https.rs  mod.rs  proxy.rs  socks4.rs  socks5.rs
src/stats/: display.rs  global.rs  mod.rs
tests/integration/: README.md  docker-compose.yml  haproxy.cfg  mod.rs  squid.conf
wiki/: Auth-backends.md  Configuration.md  Home.md  Routing-tokens.md
