[package]
description = ""
documentation = "https://docs.rs/purroute"
edition = "2021"
license = "MIT"
name = "purroute"
repository = "https://github.com/FemboyISP/purroute"
version = "0.1.0"


[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
criterion = "0.6"
dashmap = "6.1.0"
futures = "0.3.31"
libc = "0.2.172"
metrics = "0.24.2"
metrics-exporter-log = "0.4.0"
metrics-exporter-prometheus = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "sync"] }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.15"
toml = "0.8.22"
url = "2.5.4"
crossterm = "0.29.0"
chrono = "0.4.41"
once_cell = "1.20.3"
parking_lot = "0.12.4"
tokio-postgres = "0.7.13"
rand = "0.9.1"
