[package]
description = ""
documentation = "https://docs.rs/purroute"
edition = "2021"
license = "MIT"
name = "purroute"
repository = "https://github.com/FemboyISP/purroute"
version = "0.1.0"


[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.10.1"
criterion = "0.8.1"
dashmap = "6.1.0"
futures = "0.3.31"
libc = "0.2.172"
metrics = "0.24.2"
metrics-exporter-log = "0.4.0"
metrics-exporter-prometheus = "0.18.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "sync"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.15"
toml = "0.9.10+spec-1.1.0"
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.4"
crossterm = "0.29.0"
chrono = "0.4.41"
once_cell = "1.20.3"
parking_lot = "0.12.4"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
rand = "0.9.1"

[dev-dependencies]
reqwest = { version = "0.12.18", features = ["json", "socks"] }
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true
