[package]
name = "purroute"
description = "Auto-detecting proxy router with chaining and protocol translation"
documentation = "https://docs.rs/purroute"
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"
repository = "https://github.com/FemboyISP/purroute"

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = "0.29.0"
futures = "0.3.31"
ipnet = "2.11.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.18.1"
once_cell = "1.20.3"
parking_lot = "0.12.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-util = "0.7.15"
toml = "0.9.10"

[dev-dependencies]
reqwest = { version = "0.12.18", features = ["json", "socks"] }
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true

[lints.clippy]
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
borrow_as_ptr = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
wildcard_dependencies = "deny"

[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "deny"
missing_abi = "deny"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
